Commited the changes done